# vectorless-agentic-RAG

./: .env.example  1-fetch-confluence.py  1-fetch-k8s.py  2-build-index.py  3-search.py  4-agent.py  5-mcp-server.py  6-chatbot.py  README.md  pyproject.toml
utils/: agent_tools.py  confluence.py
