[project]
name = "vectorless-agentic-rag"
version = "0.1.0"
description = "Vectorless Agentic RAG using PageIndex hierarchical tree indexing"
requires-python = ">=3.11"
dependencies = [
    # HTTP + web scraping
    "requests>=2.32",
    "beautifulsoup4>=4.12",

    # Environment variables
    "python-dotenv>=1.0",

    # PageIndex — vectorless hierarchical tree indexing
    # Clones and installs from: https://github.com/VectifyAI/PageIndex
    # pip install git+https://github.com/VectifyAI/PageIndex.git
    # or: cd PageIndex && pip install -e .
    # "pageindex",  # uncomment after installing from GitHub

    # OpenAI — used by PageIndex internally for tree building (2-build-index.py)
    "openai>=1.30",

    # Structured output models
    "pydantic>=2.7",

    # Agent framework — includes Anthropic provider
    "pydantic-ai[anthropic]>=0.0.13",

    # MCP server (5-mcp-server.py) + MCP client (6-chatbot.py)
    "mcp>=1.0",

    # Anthropic SDK — direct API access in chatbot agent loop
    "anthropic>=0.28",

    # Chatbot web UI
    "streamlit>=1.35",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["utils"]
